äntligen fixat alignement med h2 och prefix

--- a/my-journey-section.css
+++ b/my-journey-section.css
@@ -5,31 +5,34 @@
 
 }
 
-.section-title{
+.section-header{
+    position: relative;
+    display: grid;
+    grid-template-columns: 200px 1fr 200px;
+    align-items: start;
+}
+
+ .section-prefix{
+    
+    grid-column: 1;
+    align-items: center;
+    text-align: end;
+    color: #e8a020 ;
+    
+} 
+
+ .section-title{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    grid-column: 2;
+    text-align: center;
     font-size: 3rem;
     font-weight: 600;
     line-height: 1.1;
     color: white;
-}
+} 
+  
 
-    
-
-
-.section-prefix{
-    margin-left: 100px;
-    align-self: flex-start;
-    color: #e8a020 ;
-    font-size: 0.9rem;
-    letter-spacing: 0.1em;
-    display: block;
-    
-    
-    
-
-}
 
 .section-my-journey{
     margin: 16px auto;
