--- a/styleHero.css
+++ b/styleHero.css
@@ -91,7 +91,7 @@ body{
   z-index: 10;
   top: 40%;
   transform:translateY(-50%);
-  left: 30%;
+  left: 37%;
   max-width: 600px;
 }
 
